--- a/mongo-deployment.yml
+++ b/mongo-deployment.yml
@@ -12,6 +12,10 @@ spec:
       labels:
         db: mongo
     spec:
+      volumes:
+        - name: mongo-storage
+          persistentVolumeClaim:
+            claimName: mongo-pvc
       containers:
       - name: mongodb
         image: mongo:3.2
@@ -21,3 +25,6 @@ spec:
             cpu: "500m"
         ports:
         - containerPort: 27017
+        volumeMounts:
+          - name: mongo-storage
+            mountPath: /var/lib/mongo/data
