--- a/cenit-deployment.yml
+++ b/cenit-deployment.yml
@@ -15,6 +15,10 @@ spec:
       containers:
       - name: cenit
         image: alejandro92/cenit:unicorn
+        resources:
+          requests:
+            memory: "2000MiB"
+            cpu: "100m"
         env:
           - name: DB_PORT
             value: mongo-cluster-ip-service
