--- a/mongo-configuration.yml
+++ b/mongo-configuration.yml
@@ -1,3 +1,17 @@
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: mongo-pvc
+spec:
+  accessModes:
+    - ReadWriteOnce
+  storageClassName: ebs-sc
+  resources:
+    requests:
+      storage: 100Gi
+
+---
+
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -18,13 +32,27 @@ spec:
             claimName: mongo-pvc
       containers:
       - name: mongodb
-        image: mongo:3.2
+        image: mongo:3.6
         resources:
-          requests:
-            memory: "1000MiB"
-            cpu: "0.5"
+          limits:
+            memory: "8Gi"
+            cpu: "2000m"
         ports:
         - containerPort: 27017
         volumeMounts:
           - name: mongo-storage
             mountPath: /data/db
+
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: mongo-cluster-ip-service
+spec:
+  selector:
+    db: mongo
+  ports:
+  - port: 27017
+    targetPort: 27017
+    
