--- a/mongo-configuration.yml
+++ b/mongo-configuration.yml
@@ -8,7 +8,7 @@ spec:
   storageClassName: ebs-sc
   resources:
     requests:
-      storage: 100Gi
+      storage: 1Gi
 
 ---
 
@@ -32,11 +32,11 @@ spec:
             claimName: mongo-pvc
       containers:
       - name: mongodb
-        image: mongo:3.6
+        image: mongo:4.4
         resources:
           limits:
-            memory: "8Gi"
-            cpu: "2000m"
+            cpu: "20m"
+            memory: "250M"
         ports:
         - containerPort: 27017
         volumeMounts:
