--- a/redis-configuration.yml
+++ b/redis-configuration.yml
@@ -32,11 +32,11 @@ spec:
             claimName: redis-pvc
       containers:
       - name: redis
-        image: redis
+        image: redis:5
         resources:
           limits:
-            memory: "1Gi"
-            cpu: "350m"
+            cpu: "20m"
+            memory: "55M"
         command: ["redis-server", "--appendonly", "yes"]
         ports:
         - containerPort: 6379
@@ -58,3 +58,4 @@ spec:
   - name: service-port
     port: 6379
     targetPort: 6379
+
